@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.3:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.4:
 
 Epson EC 4020 Series
 Epson EC 4030 Series
@@ -79,6 +79,7 @@ Epson L6580 Series
 Epson L8050 Series
 Epson L8160 Series
 Epson L8180 Series
+Epson L11050 Series
 Epson L11160 Series
 Epson L14150 Series
 Epson L15150 Series
