@@ -2,7 +2,9 @@ AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706a
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
 DIST epson-inkjet-printer-escpr2-1.2.2-1.tar.gz 5144798 BLAKE2B 2ebf6169f8cfaf9a22ae5ed2874998018216294691e4b1da24ea85d254a8b332d5a8b0f71b68f26790985bbc74b221048d6171dd4f65219824606d8ece5c7f45 SHA512 42816554935d7309b197b106ed98f0d5c7baf2ad3c5faf0fee2648959a05f107f745764d3cd8c009cc51298b86050fcc375417049090aef959bd8629f8f47432
 DIST epson-inkjet-printer-escpr2-1.2.3-1.tar.gz 5176697 BLAKE2B 731d7402f892e1dc00ecea07493f45f3014fcf6e0bb1e67356a4678baaa7cc48e7cfb15c06ecbd05f2d86b467a5f86b15d2e8417312d3bd837a7ac9acbe526af SHA512 11859452e85621722d97055858075cf347b2b8ce68786bb0415ba3a704746f6266308c632f9c2d7d16156a12f6c77200ce7e5c6570ea585ee3070f079f492c6b
+DIST epson-inkjet-printer-escpr2-1.2.4-1.tar.gz 5198180 BLAKE2B 09f1c7ac7b9bfca1e954afe509cd449653d3fd191f7da5e881afe3aaa44c7a1dae5150bda1ee51c12ea1d8358f06ca37f1cf6760dab12c8ac018da37b8b2ce55 SHA512 7d7ba412c6afbb1ff58beccaf64048ba19090de7a10077ab11919c2cc8a04824e7bf6c9a64904d38b53f73e6b4f0b4973fbabfa360deb3bc46c88911d54b6e52
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1319 BLAKE2B 1ac127fac4aec11e279e8f2b2b46d628e51b6cd22a001044e366d4a94cbb5b9e0b4aadaedde11337c6dd681999325142d2b1a77a22ea9319962bbcd02c49f992 SHA512 6d251c780d850ec05c2c9fd9bb9137adc0d1aa114783d6a7ee05c1efba58ca8f2a28600858f25c1de2425fd17358b949ab05d9c3677ead12d1f6cf3350af0f08
 EBUILD epson-inkjet-printer-escpr2-1.2.2.ebuild 1321 BLAKE2B ffc1bba50b9008a8c131db6db74b82846fdee5cb600590df902a63a98b6e4bd75bc6b949aa9a004a3c70f2b91c7fdac4d699b54e54df85119c924a834bf3c056 SHA512 d36fbeabd31e748f443b7595bf50b9f01542e0d3c10829a1c57506b76e4ee47300c5c5937cde33207bd9b6cdeca282d9aefed3a66bc61634fd4481cc6691f67f
 EBUILD epson-inkjet-printer-escpr2-1.2.3.ebuild 1321 BLAKE2B a289c4a9e27e1a030b98358c35981af83c35ff1a86a8056a368b822ca319c19916aa3553bd8cadb639dc5736e8f04816f7c45175427fe0bb2d456dd0654f956f SHA512 eb5ec3f6a4fbd8897cb5db407c968dc95c50157b8f86ef4b9777ea74186540b3921d942ed2a6e74a2fac946bf79af0443a5bccf987cc7a3a08da4969a399bc1b
+EBUILD epson-inkjet-printer-escpr2-1.2.4.ebuild 1626 BLAKE2B 70a12099959720288e15eb47e692f4cce48a5560659a655fcff8f2fb6f91e557577a70a58dbfb6fe075ef09e43ae5f8a22c1e0c6a84fca2c24e1957c1e366266 SHA512 429d64d65e827b25a41bf7a1e2413a1210f63f8451768df769cfaec22e5b92680d14c3e8ee99a8d3178d53a51ee8ae3a9e5cb41328a50d32e02341f6330042b7
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
